WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264041
countTrailingZeros is redundant and slower than ctz
https://bugs.webkit.org/show_bug.cgi?id=264041
Summary
countTrailingZeros is redundant and slower than ctz
Seija K.
Reported
2023-11-01 09:46:06 PDT
In addition to being redundant because of ctz existing, the lookup table in itself is slower due to the operations happening to the variable v before retrieving the value. Source:
https://godbolt.org/z/Pnd9nPPbo
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2023-11-01 13:44:12 PDT
Committed
270076@main
(37c77f48561a): <
https://commits.webkit.org/270076@main
> Reviewed commits have been landed. Closing PR #19840 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2023-11-01 13:45:30 PDT
<
rdar://problem/117813174
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug