[WTF] Remove countTrailingZeros https://bugs.webkit.org/show_bug.cgi?id=264041

Reviewed by Yusuke Suzuki.

In addition to being redundant because of ctz existing, the lookup table
in itself is slower due to the operations happening to the variable v
before retrieving the value. Source: https://godbolt.org/z/Pnd9nPPbo

* Source/JavaScriptCore/b3/B3ReduceStrength.cpp: Switch to WTF:ctz.
* Source/WTF/wtf/MathExtras.h:
  (WTF::countTrailingZeros): Deleted.

Canonical link: https://commits.webkit.org/270076@main