Source/JavaScriptCore/b3/B3ReduceStrength.cpp
@@ -1192,7 +1192,7 @@ private:
                 && m_value->child(1)->hasInt()) {
                 uint64_t shiftAmount = m_value->child(0)->child(1)->asInt();
                 uint64_t maskShift = m_value->child(1)->asInt();
-                uint64_t maskShiftAmount = WTF::countTrailingZeros(maskShift);
+                uint64_t maskShiftAmount = WTF::ctz(maskShift);
                 uint64_t mask = maskShift >> maskShiftAmount;
                 uint64_t width = WTF::bitCount(mask);
                 uint64_t datasize = m_value->child(0)->child(0)->type() == Int64 ? 64 : 32;
@@ -1600,7 +1600,7 @@ private:
                 && m_value->child(1)->asInt() >= 0) {
                 uint64_t shiftAmount = m_value->child(1)->asInt();
                 uint64_t maskShift = m_value->child(0)->child(1)->asInt();
-                uint64_t maskShiftAmount = WTF::countTrailingZeros(maskShift);
+                uint64_t maskShiftAmount = WTF::ctz(maskShift);
                 uint64_t mask = maskShift >> maskShiftAmount;
                 uint64_t width = WTF::bitCount(mask);
                 uint64_t datasize = m_value->child(0)->child(0)->type() == Int64 ? 64 : 32;
